--- a/package.json
+++ b/package.json
@@ -3,22 +3,32 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 7200",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "cypress open",
+    "test:watch": "jest --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-rc.9",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~9.0.0-rc.9",
     "@angular/compiler": "~9.0.0-rc.9",
     "@angular/core": "~9.0.0-rc.9",
     "@angular/forms": "~9.0.0-rc.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.0.0-rc.9",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.9",
+    "@angular/pwa": "^0.803.24",
     "@angular/router": "~9.0.0-rc.9",
+    "@angular/service-worker": "~9.0.0-rc.9",
+    "@briebug/cypress-schematic": "^3.2.0",
+    "@briebug/jest-schematic": "^2.1.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -28,20 +38,57 @@
     "@angular/cli": "~9.0.0-rc.10",
     "@angular/compiler-cli": "~9.0.0-rc.9",
     "@angular/language-service": "~9.0.0-rc.9",
-    "@types/node": "^12.11.1",
+    "@babel/core": "^7.8.4",
+    "@cypress/webpack-preprocessor": "4.1.1",
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-links": "^5.3.9",
+    "@storybook/addon-notes": "^5.3.9",
+    "@storybook/addons": "^5.3.9",
+    "@storybook/angular": "^5.3.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "25.1.1",
+    "@types/node": "^12.11.1",
+    "babel-loader": "^8.0.6",
     "codelyzer": "^5.1.2",
+    "cypress": "3.8.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
+    "jest": "25.1.0",
+    "jest-preset-angular": "8.0.0",
+    "ts-loader": "6.2.1",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.4"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "roots": [
+      "src"
+    ],
+    "transform": {
+      "^.+\\.(ts|js|html)$": "ts-jest"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setup-jest.ts"
+    ],
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/src/app/$1",
+      "@assets/(.*)": "<rootDir>/src/assets/$1",
+      "@core/(.*)": "<rootDir>/src/app/core/$1",
+      "@env": "<rootDir>/src/environments/environment",
+      "@src/(.*)": "<rootDir>/src/src/$1",
+      "@state/(.*)": "<rootDir>/src/app/state/$1"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "<rootDir>/tsconfig.spec.json",
+        "stringifyContentPathRegex": "\\.html$",
+        "astTransformers": [
+          "jest-preset-angular/build/InlineFilesTransformer",
+          "jest-preset-angular/build/StripStylesTransformer"
+        ]
+      }
+    }
   }
 }
